...
                                        <rect key="frame" x="0.0" y="0.0" width="335" height="30"/>
                                        <subviews>
                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Title" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="9Xj-gj-ZaF">
                                                <rect key="frame" x="0.0" y="0.0" width="167.5" height="30"/>
                                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
...
                                        <rect key="frame" x="0.0" y="40" width="335" height="30"/>
                                        <subviews>
                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Date" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Xb8-aA-3Sc">
                                                <rect key="frame" x="0.0" y="0.0" width="167.5" height="30"/>
                                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
...
                                        <rect key="frame" x="0.0" y="80" width="335" height="30"/>
                                        <subviews>
                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Location" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="qNg-ry-90G">
                                                <rect key="frame" x="0.0" y="0.0" width="167.5" height="30"/>
                                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
...
                                        <rect key="frame" x="0.0" y="120" width="335" height="30"/>
                                        <subviews>
                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Address" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="FGh-5b-qIS">
                                                <rect key="frame" x="0.0" y="0.0" width="167.5" height="30"/>
                                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
...
                                        <rect key="frame" x="0.0" y="160" width="335" height="30"/>
                                        <subviews>
                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Description" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="bPk-XR-ZCb">
                                                <rect key="frame" x="0.0" y="0.0" width="167.5" height="30"/>
                                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
...
                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="igT-dQ-Qeh">
                                                <rect key="frame" x="196" y="0.0" width="139" height="30"/>
                                                <state key="normal" title="Save"/>
                                                <connections>
                                                    <action selector="save" destination="n2a-HO-Cw0" eventType="touchUpInside" id="nRi-sz-gdi"/>
...
